--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "icerainzz",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "test",
   "main": "index.js",
   "scripts": {
@@ -10,10 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/icerainzz/icerainzz.git"
   },
-  "author": "",
+  "author": "judy <zhubingyu.ice@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/icerainzz/icerainzz/issues"
   },
-  "homepage": "https://github.com/icerainzz/icerainzz#readme"
+  "homepage": "https://github.com/icerainzz/icerainzz#readme",
+  "keywords": [
+    "test"
+  ]
 }
